# golem-krang-research

./: libertyFingerAngle.cpp
fingersTeleop/: CMakeLists.txt
fingersTeleop/exe/: 01-printLiberty.cpp  a.out
liberty_example/: Makefile  server.cpp
somaticTutorial/: client  client.cpp  server
